# Supervised-FineTuning-llm

./: .gitignore  README.md
s_finetuning/: README.md  pyproject.toml  requirements.txt  training_data.json
s_finetuning/config/: fine_tune_config.yaml
s_finetuning/data/: fine_tuning_data_test_single.json
s_finetuning/scripts/: constants.py  inteference.py  prepare_data.py  train.py  train_new.py
s_finetuning/sft/: qlora_gemma_sft.ipynb  testing_script.ipynb
